maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
def keepHandOnSideWall(){
	gauche();
	if(estfaceMur){
		droite();
	}else avance();
	
}
avance();gauche();avance();
while(!estSurBiscuit){
	keepHandOnSideWall();
	avance();
}
}
